[package]
name = "procedural"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
pollster = { version = "0.2.5", optional = true }
image = { version = "0.24.3", optional = true}
te-renderer = { git = "https://github.com/Calcoph/Teengine.git", optional = true}
te-player = { git = "https://github.com/Calcoph/Teengine.git", optional = true}
te-gamepad = { git = "https://github.com/Calcoph/Teengine.git", optional = true}

[features]
#default = ["view3d", "validate"] #? Uncomment when debugging view3d only. so rust-analyzer takes it into account
view3d = [
    "dep:pollster",
    "dep:image",
    "dep:te-renderer",
    "dep:te-player",
    "dep:te-gamepad"
]
validate = []

[dev_dependencies]
colored = "2.0.0"
